[metadata]
name = sara_sdk
version = 0.0.1
author = Synkar Autonomous
author_email = synkar@synkar.com
description = SDK for Sara
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True